Añadidos más recursos gráficos

--- a/pong_04.ipynb
+++ b/pong_04.ipynb
@@ -18,11 +18,441 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Version 4.0\n",
+    "version = '4.0'\n",
+    "\n",
+    "import math\n",
+    "import pygame\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "from pygame.locals import Rect\n",
+    "from math import pi\n",
+    "from vectores import Vector2\n",
+    "\n",
+    "SIZE = WIDTH, HEIGHT = 800, 640  # Tamaño de pantalla\n",
+    "\n",
+    "BLACK = (0, 0, 0)                # Colores\n",
+    "WHITE = (255, 255, 255)\n",
+    "RED = (255, 0, 0)\n",
+    "GREEN = (0, 255, 0)\n",
+    "BLUE = (0, 0, 255)\n",
+    "CYAN = (0, 255, 255)\n",
+    "MAGENTA = (255, 0, 255)\n",
+    "YELLOW = (255, 255, 0)\n",
+    "\n",
+    "FPS = 30                         # Velocidad del juego\n",
+    "        \n",
+    "class Ball(pygame.sprite.Sprite):\n",
+    "    \n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        super().__init__()\n",
+    "        self.pos = Vector2(x, y)\n",
+    "        self.speed = 10\n",
+    "        self.orientation = Vector2(1, 0)\n",
+    "        self.orientation.theta = random.uniform(pi/4, -pi/4)\n",
+    "        self.rect = pygame.Rect((self.pos.x-11, self.pos.y-11), (23, 23))\n",
+    "        self.image = pygame.image.load('art/ball.png')\n",
+    "    \n",
+    "    def bounce(self):\n",
+    "        self.orientation.theta = pi - self.orientation.theta\n",
+    "        self.orientation.theta += random.uniform(-pi/8, pi/8)\n",
+    "        \n",
+    "    def update(self):\n",
+    "        self.pos += self.orientation * self.speed\n",
+    "        if self.pos.x < 0:\n",
+    "            self.pos.x = 0\n",
+    "            self.bounce()\n",
+    "        elif self.pos.x > WIDTH:\n",
+    "            self.pos.x = WIDTH\n",
+    "            self.bounce()\n",
+    "        if self.pos.y < 0:\n",
+    "            self.pos.y = 0\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        elif self.pos.y > HEIGHT:\n",
+    "            self.pos.y = HEIGHT\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        self.rect.center = self.pos\n",
+    "\n",
+    "class InputState:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.left_up = False\n",
+    "        self.left_down = False\n",
+    "        self.right_up = False\n",
+    "        self.right_down = False\n",
+    "        self.exit = False\n",
+    "        \n",
+    "    def update(self):\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                self.exit = True\n",
+    "            elif event.type == pygame.KEYDOWN:\n",
+    "                if event.key == pygame.K_ESCAPE:\n",
+    "                    self.exit = True\n",
+    "                elif event.key == pygame.K_w:\n",
+    "                    self.left_up = True\n",
+    "                elif event.key == pygame.K_s:\n",
+    "                    self.left_down = True\n",
+    "                elif event.key == pygame.K_UP:\n",
+    "                    self.right_up = True\n",
+    "                elif event.key == pygame.K_DOWN:\n",
+    "                    self.right_down = True\n",
+    "            elif event.type == pygame.KEYUP:\n",
+    "                if event.key == pygame.K_w:\n",
+    "                    self.left_up = False\n",
+    "                elif event.key == pygame.K_s:\n",
+    "                    self.left_down = False\n",
+    "                elif event.key == pygame.K_UP:\n",
+    "                    self.right_up = False\n",
+    "                elif event.key == pygame.K_DOWN:\n",
+    "                    self.right_down = False\n",
+    "\n",
+    "\n",
+    "class Paddle(pygame.sprite.Sprite):\n",
+    "    \n",
+    "    def __init__(self, x, y):\n",
+    "        super().__init__()\n",
+    "        self.rect = Rect((0, 0), (14, 100))\n",
+    "        self.rect.center = (x, y)\n",
+    "        self.image = pygame.Surface([14, 100])\n",
+    "        self.image.fill(WHITE)\n",
+    "        \n",
+    "    def update(self):\n",
+    "        self.rect = self.rect.move(0, self.speed)\n",
+    "        \n",
+    "    def go_up(self):\n",
+    "        self.speed = -10\n",
+    "\n",
+    "    def go_down(self):\n",
+    "        self.speed = 10\n",
+    "        \n",
+    "    def stop(self):\n",
+    "        self.speed = 0\n",
+    "\n",
+    "        \n",
+    "class LeftPad(Paddle):\n",
+    "    \n",
+    "    def update(self, inputs):\n",
+    "        if inputs.left_up:\n",
+    "            self.go_up()\n",
+    "        elif inputs.left_down:\n",
+    "            self.go_down()\n",
+    "        else:  \n",
+    "            self.stop()\n",
+    "        super().update()\n",
+    "\n",
+    "    def check_impact(self, ball):\n",
+    "        if ball.rect.colliderect(self.rect):\n",
+    "            ball.rect.left = self.rect.right + 1\n",
+    "            ball.bounce()\n",
+    "        \n",
+    "        \n",
+    "class RightPad(Paddle):\n",
+    "    \n",
+    "    def update(self, inputs):\n",
+    "        if inputs.right_up:\n",
+    "            self.go_up()\n",
+    "        elif inputs.right_down:\n",
+    "            self.go_down()\n",
+    "        else:\n",
+    "            self.stop()        \n",
+    "        super().update()   \n",
+    "\n",
+    "    def check_impact(self, ball):\n",
+    "        if ball.rect.colliderect(self.rect):\n",
+    "            ball.rect.right = self.rect.left - 1\n",
+    "            ball.bounce()\n",
+    "            \n",
+    "        \n",
+    "pygame.init()\n",
+    "try:\n",
+    "    pygame.display.set_caption(version)\n",
+    "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
+    "    limits = screen.get_rect()\n",
+    "    \n",
+    "    # Parte de inicialización del juego\n",
+    "    r_paddle = RightPad(WIDTH-50, HEIGHT//2)\n",
+    "    l_paddle = LeftPad(50, HEIGHT//2)\n",
+    "    ball = Ball(limits.centerx, limits.centery)\n",
+    "    all_objects = pygame.sprite.Group(ball, r_paddle, l_paddle)\n",
+    "    clock = pygame.time.Clock()    \n",
+    "    input_state = InputState()\n",
+    "    while True:\n",
+    "        input_state.update()\n",
+    "        if input_state.exit:\n",
+    "            break\n",
+    "        r_paddle.update(input_state)\n",
+    "        l_paddle.update(input_state)\n",
+    "        r_paddle.check_impact(ball)\n",
+    "        l_paddle.check_impact(ball)\n",
+    "        ball.update()    \n",
+    "        screen.fill(BLACK)\n",
+    "        all_objects.draw(screen)\n",
+    "        pygame.draw.rect(screen, RED, ball.rect, 1)\n",
+    "        pygame.draw.rect(screen, RED, r_paddle.rect, 1)\n",
+    "        pygame.draw.rect(screen, RED, l_paddle.rect, 1)\n",
+    "        pygame.display.update()\n",
+    "        clock.tick(FPS)\n",
+    "finally:\n",
+    "    pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vamos a hacer una versión animada de las raquetas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Version 4.1\n",
+    "\n",
+    "import math\n",
+    "import pygame\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "from pygame.locals import Rect\n",
+    "from math import pi\n",
+    "from vectores import Vector2\n",
+    "\n",
+    "SIZE = WIDTH, HEIGHT = 800, 640  # Tamaño de pantalla\n",
+    "\n",
+    "BLACK = (0, 0, 0)                # Colores\n",
+    "WHITE = (255, 255, 255)\n",
+    "RED = (255, 0, 0)\n",
+    "GREEN = (0, 255, 0)\n",
+    "BLUE = (0, 0, 255)\n",
+    "CYAN = (0, 255, 255)\n",
+    "MAGENTA = (255, 0, 255)\n",
+    "YELLOW = (255, 255, 0)\n",
+    "\n",
+    "FPS = 30                         # Velocidad del juego\n",
+    "        \n",
+    "class Ball(pygame.sprite.Sprite):\n",
+    "    \n",
+    "    def __init__(self, x=0, y=0):\n",
+    "        super().__init__()\n",
+    "        self.pos = Vector2(x, y)\n",
+    "        self.speed = 10\n",
+    "        self.orientation = Vector2(1, 0)\n",
+    "        self.orientation.theta = random.uniform(pi/4, -pi/4)\n",
+    "        self.rect = pygame.Rect((self.pos.x-11, self.pos.y-11), (23, 23))\n",
+    "        self.image = pygame.image.load('art/ball.png')\n",
+    "    \n",
+    "    def bounce(self):\n",
+    "        self.orientation.theta = pi - self.orientation.theta\n",
+    "        self.orientation.theta += random.uniform(-pi/8, pi/8)\n",
+    "        \n",
+    "    def update(self):\n",
+    "        self.pos += self.orientation * self.speed\n",
+    "        if self.pos.x < 0:\n",
+    "            self.pos.x = 0\n",
+    "            self.bounce()\n",
+    "        elif self.pos.x > WIDTH:\n",
+    "            self.pos.x = WIDTH\n",
+    "            self.bounce()\n",
+    "        if self.pos.y < 0:\n",
+    "            self.pos.y = 0\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        elif self.pos.y > HEIGHT:\n",
+    "            self.pos.y = HEIGHT\n",
+    "            self.orientation.theta = -self.orientation.theta\n",
+    "        self.rect.center = self.pos\n",
+    "\n",
+    "class InputState:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.left_up = False\n",
+    "        self.left_down = False\n",
+    "        self.right_up = False\n",
+    "        self.right_down = False\n",
+    "        self.exit = False\n",
+    "        \n",
+    "    def update(self):\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                self.exit = True\n",
+    "            elif event.type == pygame.KEYDOWN:\n",
+    "                if event.key == pygame.K_ESCAPE:\n",
+    "                    self.exit = True\n",
+    "                elif event.key == pygame.K_w:\n",
+    "                    self.left_up = True\n",
+    "                elif event.key == pygame.K_s:\n",
+    "                    self.left_down = True\n",
+    "                elif event.key == pygame.K_UP:\n",
+    "                    self.right_up = True\n",
+    "                elif event.key == pygame.K_DOWN:\n",
+    "                    self.right_down = True\n",
+    "            elif event.type == pygame.KEYUP:\n",
+    "                if event.key == pygame.K_w:\n",
+    "                    self.left_up = False\n",
+    "                elif event.key == pygame.K_s:\n",
+    "                    self.left_down = False\n",
+    "                elif event.key == pygame.K_UP:\n",
+    "                    self.right_up = False\n",
+    "                elif event.key == pygame.K_DOWN:\n",
+    "                    self.right_down = False\n",
+    "\n",
+    "\n",
+    "class Paddle(pygame.sprite.Sprite):\n",
+    "    \n",
+    "    def __init__(self, x, y):\n",
+    "        super().__init__()\n",
+    "        self.rect = Rect((0, 0), (15, 75))\n",
+    "        self.rect.center = (x, y)\n",
+    "        self.frames = [\n",
+    "            pygame.image.load('art/p00.png'),\n",
+    "            pygame.image.load('art/p01.png'),\n",
+    "            pygame.image.load('art/p02.png'),\n",
+    "            pygame.image.load('art/p03.png'),\n",
+    "            pygame.image.load('art/p04.png'),\n",
+    "            pygame.image.load('art/p05.png'),\n",
+    "            pygame.image.load('art/p04.png'),\n",
+    "            pygame.image.load('art/p03.png'),\n",
+    "            pygame.image.load('art/p02.png'),\n",
+    "            pygame.image.load('art/p01.png'),\n",
+    "        ]\n",
+    "        self.counter = 0\n",
+    "        self.image = self.frames[self.counter]\n",
+    "        \n",
+    "    def update(self):\n",
+    "        self.rect = self.rect.move(0, self.speed)\n",
+    "        self.counter = (self.counter + 1) % 20\n",
+    "        self.image = self.frames[self.counter // 2]\n",
+    "        \n",
+    "    def go_up(self):\n",
+    "        self.speed = -10\n",
+    "\n",
+    "    def go_down(self):\n",
+    "        self.speed = 10\n",
+    "        \n",
+    "    def stop(self):\n",
+    "        self.speed = 0\n",
+    "\n",
+    "        \n",
+    "class LeftPad(Paddle):\n",
+    "    \n",
+    "    def update(self, inputs):\n",
+    "        if inputs.left_up:\n",
+    "            self.go_up()\n",
+    "        elif inputs.left_down:\n",
+    "            self.go_down()\n",
+    "        else:  \n",
+    "            self.stop()\n",
+    "        super().update()\n",
+    "\n",
+    "    def check_impact(self, ball):\n",
+    "        if ball.rect.colliderect(self.rect):\n",
+    "            ball.rect.left = self.rect.right + 1\n",
+    "            ball.bounce()\n",
+    "        \n",
+    "        \n",
+    "class RightPad(Paddle):\n",
+    "    \n",
+    "    def update(self, inputs):\n",
+    "        if inputs.right_up:\n",
+    "            self.go_up()\n",
+    "        elif inputs.right_down:\n",
+    "            self.go_down()\n",
+    "        else:\n",
+    "            self.stop()        \n",
+    "        super().update()   \n",
+    "\n",
+    "    def check_impact(self, ball):\n",
+    "        if ball.rect.colliderect(self.rect):\n",
+    "            ball.rect.right = self.rect.left - 1\n",
+    "            ball.bounce()\n",
+    "            \n",
+    "        \n",
+    "pygame.init()\n",
+    "try:\n",
+    "    pygame.display.set_caption(\"Pong 4.0\")\n",
+    "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
+    "    limits = screen.get_rect()\n",
+    "    \n",
+    "    # Parte de inicialización del juego\n",
+    "    r_paddle = RightPad(WIDTH-50, HEIGHT//2)\n",
+    "    l_paddle = LeftPad(50, HEIGHT//2)\n",
+    "    ball = Ball(limits.centerx, limits.centery)\n",
+    "    all_objects = pygame.sprite.Group(ball, r_paddle, l_paddle)\n",
+    "    clock = pygame.time.Clock()    \n",
+    "    input_state = InputState()\n",
+    "    while True:\n",
+    "        input_state.update()\n",
+    "        if input_state.exit:\n",
+    "            break\n",
+    "        r_paddle.update(input_state)\n",
+    "        l_paddle.update(input_state)\n",
+    "        r_paddle.check_impact(ball)\n",
+    "        l_paddle.check_impact(ball)\n",
+    "        ball.update()    \n",
+    "        screen.fill(BLACK)\n",
+    "        all_objects.draw(screen)\n",
+    "        for s in all_objects.sprites():\n",
+    "            pygame.draw.rect(screen, RED, s.rect, 1)\n",
+    "        \n",
+    "        pygame.display.update()\n",
+    "        clock.tick(FPS)\n",
+    "finally:\n",
+    "    pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Versión "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Version 4.2\n",
     "\n",
     "import math\n",
     "import pygame\n",
@@ -62,8 +492,7 @@
     "            self.frames.append(pygame.image.load(fn))    \n",
     "        self.counter = 0\n",
     "        self.image = self.frames[self.counter]\n",
-    "        \n",
-    "    \n",
+    "\n",
     "    def bounce(self):\n",
     "        self.orientation.theta = pi - self.orientation.theta\n",
     "        self.orientation.theta += random.uniform(-pi/8, pi/8)\n",
@@ -128,9 +557,6 @@
     "        super().__init__()\n",
     "        self.rect = Rect((0, 0), (14, 100))\n",
     "        self.rect.center = (x, y)\n",
-    "        \n",
-    "        \n",
-    "        \n",
     "        self.frames = []\n",
     "        for i in range(9):\n",
     "            fn = 'art/pad{:02d}.png'.format(i)\n",
@@ -160,43 +586,8 @@
     "        elif inputs.left_down:\n",
     "            self.go_down()\n",
     "        else:  \n",
-    "            stop()\n",
-    "        \n",
-    "    def update(self):\n",
-    "        self.rect = self.rect.move(0, self.speed)\n",
-    "        self.counter = (self.counter + 1) % 5\n",
-    "        self.image = self.images[self.counter]\n",
-    "        \n",
-    "    def go_up(self):\n",
-    "        self.speed = -10\n",
-    "\n",
-    "    def go_down(self):\n",
-    "        self.speed = 10\n",
-    "        \n",
-    "    def stop(self):\n",
-    "        self.speed = 0\n",
-    "\n",
-    "class LeftPad(Paddle):\n",
-    "    \n",
-    "    def update(self, inputs):\n",
-    "        if inputs.left_up:\n",
-    "            self.go_up()\n",
-    "        elif inputs.left_down:\n",
-    "            self.go_down()\n",
-    "        else:\n",
-    "            self.stop()        \n",
+    "            self.stop()\n",
     "        super().update()\n",
-    "    \n",
-    "class RightPad(Paddle):\n",
-    "    \n",
-    "    def update(self, inputs):\n",
-    "        if inputs.right_up:\n",
-    "            self.go_up()\n",
-    "        elif inputs.right_down:\n",
-    "            self.go_down()\n",
-    "        else:\n",
-    "            self.stop()        \n",
-    "        super().update()   \n",
     "\n",
     "    \n",
     "class RightPad(Paddle):\n",
@@ -209,6 +600,7 @@
     "        else:\n",
     "            self.stop()        \n",
     "        super().update()   \n",
+    "\n",
     "        \n",
     "def impact(paddle, ball):\n",
     "    if ball.rect.colliderect(paddle.rect):\n",
