Falta mejorar rebote

--- a/pong_05.ipynb
+++ b/pong_05.ipynb
@@ -8,33 +8,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-4bbfe0d7feb6>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-4bbfe0d7feb6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Versión completa del juego. Usamos sprites perp para darle un aspecto más retro aun.\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "Versión completa del juego. Usamos sprites perp para darle un aspecto más retro aun."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +29,7 @@
     "\n",
     "from pygame.locals import Rect\n",
     "from math import pi\n",
+    "import vectores\n",
     "from vectores import Vector2\n",
     "\n",
     "SIZE = WIDTH, HEIGHT = 800, 600  # Tamaño de pantalla\n",
@@ -62,7 +45,20 @@
     "YELLOW = (255, 255, 0)\n",
     "\n",
     "FPS = 30                         # Velocidad del juego\n",
-    "        \n",
+    "\n",
+    "\n",
+    "def draw_vector(screen, color, vector, origin=vectores.zero):\n",
+    "    pygame.draw.line(screen, color, origin, origin+vector)\n",
+    "    pygame.draw.circle(screen, color, origin, 3)\n",
+    "    arrow_point = origin + vector\n",
+    "    orientation = vector.unit() * 10\n",
+    "    orientation.theta -= 7*pi/8\n",
+    "    left_wing =  arrow_point + orientation \n",
+    "    orientation.theta -= pi/4\n",
+    "    right_wing =  arrow_point + orientation\n",
+    "    pygame.draw.polygon(screen, color, [arrow_point, left_wing, right_wing])\n",
+    "    \n",
+    "\n",
     "class Ball(pygame.sprite.Sprite):\n",
     "    \n",
     "    def __init__(self, x=0, y=0):\n",
@@ -188,97 +184,113 @@
     "            self.stop()        \n",
     "        super().update()   \n",
     "\n",
-    "        \n",
-    "def check_impact(paddle, ball):\n",
-    "    if ball.rect.colliderect(paddle.rect):\n",
-    "        ball.orientation.theta = pi - ball.orientation.theta\n",
+    "class Game:\n",
+    "    \n",
+    "    def __init__(self, screen):\n",
+    "        self.screen = screen\n",
+    "        box = self.screen.get_rect()\n",
+    "        self.width, self.height = box.width, box.height\n",
+    "        self.background = pygame.image.load('pong/background.png')\n",
+    "        self.font = pygame.font.Font('pong/fonts/arcade.ttf', 90)\n",
+    "        self.center = Vector2(self.width // 2, self.height // 2)\n",
+    "        self.r_paddle = RightPad(self.width - 50, self.center.y)\n",
+    "        self.l_paddle = LeftPad(50, self.center.y)\n",
+    "        self.ball = Ball(self.center.x, self.center.y)\n",
+    "        self.all_objects = pygame.sprite.Group(\n",
+    "            self.ball, \n",
+    "            self.r_paddle,\n",
+    "            self.l_paddle\n",
+    "            )\n",
+    "        self.score = {\n",
+    "            'left': 0,\n",
+    "            'right': 0,\n",
+    "            }\n",
+    "        self.reset()\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.counter = 3 * FPS\n",
+    "        self.ball.reset()\n",
+    "    \n",
+    "    def update(self, inputs):\n",
+    "        self.r_paddle.update(inputs)\n",
+    "        self.l_paddle.update(inputs)\n",
+    "        self.ball.update() \n",
+    "        if self.ball.rect.colliderect(self.l_paddle.rect):\n",
+    "            self.ball.rect.left = self.l_paddle.rect.right\n",
+    "            self.ball.orientation = Vector2(1, 0)\n",
+    "            delta = self.l_paddle.rect.centery - self.ball.rect.centery\n",
+    "            self.ball.orientation.theta +=  (delta * pi) / 100\n",
+    "            \n",
+    "        elif self.ball.rect.colliderect(self.r_paddle.rect):\n",
+    "            self.ball.rect.right = self.r_paddle.rect.left\n",
+    "            self.ball.orientation = Vector2(-1, 0)\n",
+    "            #self.ball.orientation.theta = pi - self.ball.orientation.theta\n",
     "\n",
     "        \n",
-    "def left_wins(ball):\n",
-    "    return ball.rect.left < 0\n",
+    "    def left_wins(self):\n",
+    "        return self.ball.rect.left < 0\n",
     "\n",
+    "    def right_wins(self):\n",
+    "         return self.ball.rect.right > WIDTH\n",
     "\n",
-    "def right_wins(ball):\n",
-    "     return ball.rect.right > WIDTH\n",
+    "    def draw(self, trace_on=False):\n",
+    "        self.screen.blit(self.background, (0, 0))\n",
+    "        self.draw_score()\n",
+    "        if self.counter > 0:\n",
+    "            seconds = self.counter // FPS\n",
+    "            self.draw_text(seconds, self.center)\n",
+    "        self.all_objects.draw(screen)\n",
+    "        if trace_on:\n",
+    "            for item in all_objects.sprites():\n",
+    "                pygame.draw.rect(screen, RED, item.rect, 1)\n",
     "        \n",
+    "        pygame.draw.rect(screen, RED, self.l_paddle.rect, 2)\n",
+    "        delta = self.l_paddle.rect.centery -  self.ball.rect.centery\n",
+    "        delta = min(delta, 50) if delta > 0 else max(delta, -50)\n",
+    "        self.draw_text(delta, (50, 550))\n",
+    "        left_bounce = vectores.left\n",
+    "        left_bounce.theta = (delta * pi) / 200\n",
+    "        origin = Vector2(self.l_paddle.rect.centerx, self.l_paddle.rect.centery)\n",
+    "        \n",
+    "        draw_vector(self.screen, YELLOW, left_bounce*100, origin)\n",
+    "        draw_vector(self.screen, RED, self.ball.orientation*70, Vector2(self.ball.rect.centerx, self.ball.rect.centery))\n",
+    "        \n",
+    "        \n",
+    "        pygame.display.update()\n",
     "\n",
-    "score = {\n",
-    "    'left': 0,\n",
-    "    'right': 0,\n",
-    "    }\n",
-    "    \n",
-    "def draw_text(screen, text, position):\n",
-    "    img = font.render(str(text), True, GREEN)\n",
-    "    rect = img.get_rect()\n",
-    "    rect.centerx = position[0]\n",
-    "    rect.centery = position[1]\n",
-    "    screen.blit(img, rect)\n",
-    "    \n",
-    "def draw_score(screen, score, position):\n",
-    "    img = font.render(str(score), True, GREEN)\n",
-    "    rect = img.get_rect()\n",
-    "    rect.centerx = position[0]\n",
-    "    rect.top = position[1]\n",
-    "    screen.blit(img, rect)\n",
-    "    \n",
+    "    def draw_text(self, text, position):\n",
+    "        img = self.font.render(str(text), True, GREEN)\n",
+    "        rect = img.get_rect()\n",
+    "        rect.center = position\n",
+    "        self.screen.blit(img, rect)\n",
+    "        \n",
+    "    def draw_score(self):\n",
+    "        self.draw_text(self.score['left'], (200, 50))\n",
+    "        self.draw_text(self.score['right'], (600, 50))\n",
     "\n",
-    "def draw_game(screen, background, score, counter, trace_on=False):\n",
-    "    screen.blit(background, (0, 0))\n",
-    "    draw_score(screen, score['left'], (320, 50))\n",
-    "    draw_score(screen, score['right'], (470, 50))\n",
-    "    if counter:\n",
-    "        draw_text(screen, counter, CENTER)\n",
-    "    all_objects.draw(screen)\n",
-    "    if trace_on:\n",
-    "        for item in all_objects.sprites():\n",
-    "            pygame.draw.rect(screen, RED, item.rect, 1)\n",
-    "    pygame.display.update()\n",
-    "    \n",
-    "    \n",
-    "def reset_game():\n",
-    "    global counter, ball\n",
-    "    counter = 3 * FPS\n",
-    "    ball.reset()\n",
     "    \n",
     "pygame.init()\n",
-    "\n",
     "try:\n",
     "    pygame.display.set_caption(version)\n",
-    "    background = pygame.image.load('pong/background.png')\n",
-    "    font = pygame.font.Font('pong/fonts/arcade.ttf', 90)\n",
-    "\n",
     "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
-    "    limits = screen.get_rect()\n",
-    "    \n",
-    "    # Parte de inicialización del juego\n",
-    "    r_paddle = RightPad(WIDTH-50, HEIGHT//2)\n",
-    "    l_paddle = LeftPad(50, HEIGHT//2)\n",
-    "    ball = Ball(limits.centerx, limits.centery)\n",
-    "    all_objects = pygame.sprite.Group(ball, r_paddle, l_paddle)\n",
+    "    game = Game(screen)\n",
     "    clock = pygame.time.Clock()    \n",
     "    input_state = InputState()\n",
-    "    counter = 3 * FPS\n",
+    "    \n",
     "    while True:\n",
-    "        if counter > 0:\n",
-    "            counter -= 1\n",
-    "        else:\n",
-    "            input_state.update()\n",
-    "            if input_state.exit:\n",
-    "                break\n",
-    "            check_impact(r_paddle, ball)\n",
-    "            check_impact(l_paddle, ball)\n",
-    "            r_paddle.update(input_state)\n",
-    "            l_paddle.update(input_state)\n",
-    "            ball.update()  \n",
-    "            if left_wins(ball):\n",
-    "                score['left'] += 1\n",
-    "                reset_game()\n",
-    "            if right_wins(ball):\n",
-    "                score['right'] += 1\n",
-    "                reset_game()\n",
-    "        draw_game(screen, background, score, counter)\n",
+    "        input_state.update()\n",
+    "        if input_state.exit:\n",
+    "            break\n",
+    "        game.update(input_state)\n",
+    "        if game.left_wins():\n",
+    "            game.score['left'] += 1\n",
+    "            game.reset()\n",
+    "        if game.right_wins():\n",
+    "            game.score['right'] += 1\n",
+    "            game.reset()\n",
+    "        game.draw()\n",
     "        clock.tick(FPS)\n",
-    "        if score['left'] > 15 or score['right'] > 15:\n",
+    "        if game.score['left'] > 15 or game.score['right'] > 15:\n",
     "            break\n",
     "finally:\n",
     "    pygame.quit()"
