--- a/pong_05.ipynb
+++ b/pong_05.ipynb
@@ -11,16 +11,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Versión completa del juego. Usamos sprites perp para darle un aspecto más retro aun."
+    "Versión completa del juego. Usamos sprites pero para darle un aspecto más retro aun."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528452549.118251\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528452553.7518935\n",
+      "hit walls\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528452558.5152884\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528452562.22148\n",
+      "hit walls\n",
+      "hit walls\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "hit walls\n",
+      "ball hists right paddle 1528452569.525971\n",
+      "hit walls\n",
+      "ball hists right paddle 1528452573.4273834\n",
+      "hit walls\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528452584.7037117\n",
+      "ball hists left paddle\n",
+      "hit walls\n",
+      "ball hists right paddle 1528452589.764872\n",
+      "hit walls\n",
+      "ball hists left paddle\n",
+      "ball hists right paddle 1528452594.9272532\n"
+     ]
+    }
+   ],
    "source": [
-    "version = '4.0'\n",
+    "version = '5.0'\n",
     "\n",
     "import math\n",
     "import pygame\n",
@@ -47,7 +83,8 @@
     "FPS = 30                         # Velocidad del juego\n",
     "\n",
     "\n",
-    "def draw_vector(screen, color, vector, origin=vectores.zero):\n",
+    "def draw_vector(screen, color, vector, origin=(0, 0)):\n",
+    "    origin = Vector2(origin)\n",
     "    pygame.draw.line(screen, color, origin, origin+vector)\n",
     "    pygame.draw.circle(screen, color, origin, 3)\n",
     "    arrow_point = origin + vector\n",
@@ -78,23 +115,34 @@
     "\n",
     "    def reset(self):\n",
     "        self.rect.center = CENTER\n",
-    "        self.orientation = Vector2(1, 0)\n",
-    "        self.orientation.theta = random.uniform(pi/4, -pi/4)\n",
+    "        self.speed = 10\n",
+    "        if random.random() < 0.5:\n",
+    "            self.orientation = Vector2.Right()\n",
+    "        else:\n",
+    "            self.orientation = Vector2.Left()\n",
+    "        # self.orientation.theta += random.uniform(pi/4, -pi/4)\n",
     "        \n",
     "    def bounce(self):\n",
     "        self.orientation.theta = -self.orientation.theta\n",
     "\n",
     "    def update(self):\n",
-    "        delta =  self.orientation * self.speed\n",
-    "        self.rect.center = Vector2(self.rect.centerx, self.rect.centery) + delta\n",
+    "        delta = self.orientation * self.speed\n",
+    "        self.rect.center = Vector2(self.rect.center) + delta\n",
+    "        hit_walls = False\n",
     "        if self.rect.top < 0:\n",
     "            self.rect.top = 0\n",
     "            self.bounce()\n",
+    "            hit_walls = True\n",
     "        elif self.rect.bottom > HEIGHT:\n",
     "            self.rect.bottom = HEIGHT\n",
     "            self.bounce()\n",
-    "        self.counter = (self.counter + 1) % self.num_frames\n",
-    "        self.image = self.frames[self.counter]\n",
+    "            hit_walls = True\n",
+    "        self.counter = self.counter + 1\n",
+    "        self.image = self.frames[self.counter% self.num_frames]\n",
+    "        if self.counter % FPS == 0:\n",
+    "            self.speed += .25\n",
+    "        return hit_walls\n",
+    "\n",
     "\n",
     "class InputState:\n",
     "    \n",
@@ -105,7 +153,7 @@
     "        self.right_down = False\n",
     "        self.exit = False\n",
     "        \n",
-    "    def update(self):\n",
+    "    def check(self):\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                self.exit = True\n",
@@ -145,8 +193,7 @@
     "        self.image = self.frames[self.counter]\n",
     "        self.rect = self.image.get_rect()\n",
     "        self.rect.center = (x, y)\n",
-    "        \n",
-    "        \n",
+    "\n",
     "    def update(self):\n",
     "        self.rect = self.rect.move(0, self.speed)\n",
     "        self.counter = (self.counter + 1) % self.num_frames\n",
@@ -184,14 +231,13 @@
     "            self.stop()        \n",
     "        super().update()   \n",
     "\n",
+    "\n",
     "class Game:\n",
     "    \n",
     "    def __init__(self, screen):\n",
     "        self.screen = screen\n",
     "        box = self.screen.get_rect()\n",
     "        self.width, self.height = box.width, box.height\n",
-    "        self.background = pygame.image.load('pong/background.png')\n",
-    "        self.font = pygame.font.Font('pong/fonts/arcade.ttf', 90)\n",
     "        self.center = Vector2(self.width // 2, self.height // 2)\n",
     "        self.r_paddle = RightPad(self.width - 50, self.center.y)\n",
     "        self.l_paddle = LeftPad(50, self.center.y)\n",
@@ -205,27 +251,52 @@
     "            'left': 0,\n",
     "            'right': 0,\n",
     "            }\n",
+    "        self.load_resources()\n",
     "        self.reset()\n",
+    "\n",
+    "    def load_resources(self):\n",
+    "        self.background = pygame.image.load('pong/background.png')\n",
+    "        self.font = pygame.font.Font('pong/fonts/arcade.ttf', 90)\n",
+    "        self.paddle_sound = pygame.mixer.Sound('pong/audio/ping_paddle.wav')\n",
+    "        self.plop_sound = pygame.mixer.Sound('pong/audio/pong_plop.wav')\n",
     "\n",
     "    def reset(self):\n",
     "        self.counter = 3 * FPS\n",
     "        self.ball.reset()\n",
     "    \n",
+    "    def calc_bounce_angle(self, pos):\n",
+    "        pos = Vector2(pos)\n",
+    "        ball_pos = Vector2(self.ball.rect.center)\n",
+    "        delta = pos.y - ball_pos.y\n",
+    "        delta = min(delta, 55) if delta > 0 else max(delta, -55)\n",
+    "        if ball_pos.x < pos.x:  # Bounces on right paddle\n",
+    "            result = Vector2.Left()\n",
+    "            result.theta = pi + delta * pi / 200\n",
+    "        else:\n",
+    "            result = Vector2.Right()\n",
+    "            result.theta = -delta * pi / 200\n",
+    "        return result\n",
+    "    \n",
     "    def update(self, inputs):\n",
     "        self.r_paddle.update(inputs)\n",
     "        self.l_paddle.update(inputs)\n",
-    "        self.ball.update() \n",
+    "        hit_walls = self.ball.update() \n",
+    "        if hit_walls:\n",
+    "            print('hit walls')\n",
+    "            self.plop_sound.play()\n",
+    "        hit_paddle = False\n",
     "        if self.ball.rect.colliderect(self.l_paddle.rect):\n",
+    "            print('ball hists left paddle')\n",
     "            self.ball.rect.left = self.l_paddle.rect.right\n",
-    "            self.ball.orientation = Vector2(1, 0)\n",
-    "            delta = self.l_paddle.rect.centery - self.ball.rect.centery\n",
-    "            self.ball.orientation.theta +=  (delta * pi) / 100\n",
-    "            \n",
+    "            self.ball.orientation = self.calc_bounce_angle(self.l_paddle.rect.center)\n",
+    "            hit_paddle = True\n",
     "        elif self.ball.rect.colliderect(self.r_paddle.rect):\n",
+    "            print('ball hists right paddle',time.time())\n",
     "            self.ball.rect.right = self.r_paddle.rect.left\n",
-    "            self.ball.orientation = Vector2(-1, 0)\n",
-    "            #self.ball.orientation.theta = pi - self.ball.orientation.theta\n",
-    "\n",
+    "            self.ball.orientation = self.calc_bounce_angle(self.r_paddle.rect.center)\n",
+    "            hit_paddle = True\n",
+    "        if hit_paddle:\n",
+    "            self.paddle_sound.play()\n",
     "        \n",
     "    def left_wins(self):\n",
     "        return self.ball.rect.left < 0\n",
@@ -238,24 +309,15 @@
     "        self.draw_score()\n",
     "        if self.counter > 0:\n",
     "            seconds = self.counter // FPS\n",
-    "            self.draw_text(seconds, self.center)\n",
     "        self.all_objects.draw(screen)\n",
     "        if trace_on:\n",
-    "            for item in all_objects.sprites():\n",
+    "            for item in self.all_objects.sprites():\n",
     "                pygame.draw.rect(screen, RED, item.rect, 1)\n",
-    "        \n",
-    "        pygame.draw.rect(screen, RED, self.l_paddle.rect, 2)\n",
-    "        delta = self.l_paddle.rect.centery -  self.ball.rect.centery\n",
-    "        delta = min(delta, 50) if delta > 0 else max(delta, -50)\n",
-    "        self.draw_text(delta, (50, 550))\n",
-    "        left_bounce = vectores.left\n",
-    "        left_bounce.theta = (delta * pi) / 200\n",
-    "        origin = Vector2(self.l_paddle.rect.centerx, self.l_paddle.rect.centery)\n",
-    "        \n",
-    "        draw_vector(self.screen, YELLOW, left_bounce*100, origin)\n",
-    "        draw_vector(self.screen, RED, self.ball.orientation*70, Vector2(self.ball.rect.centerx, self.ball.rect.centery))\n",
-    "        \n",
-    "        \n",
+    "            draw_vector(self.screen, CYAN, self.ball.orientation*25, self.ball.rect.center)\n",
+    "            for pad in (self.l_paddle, self.r_paddle):\n",
+    "                origin = Vector2(pad.rect.center)\n",
+    "                expected_bounce = self.calc_bounce_angle(origin)\n",
+    "                draw_vector(self.screen, YELLOW, expected_bounce*100, origin)\n",
     "        pygame.display.update()\n",
     "\n",
     "    def draw_text(self, text, position):\n",
@@ -278,7 +340,7 @@
     "    input_state = InputState()\n",
     "    \n",
     "    while True:\n",
-    "        input_state.update()\n",
+    "        input_state.check()\n",
     "        if input_state.exit:\n",
     "            break\n",
     "        game.update(input_state)\n",
@@ -288,12 +350,12 @@
     "        if game.right_wins():\n",
     "            game.score['right'] += 1\n",
     "            game.reset()\n",
-    "        game.draw()\n",
+    "        game.draw(trace_on=True)\n",
     "        clock.tick(FPS)\n",
     "        if game.score['left'] > 15 or game.score['right'] > 15:\n",
     "            break\n",
     "finally:\n",
-    "    pygame.quit()"
+    "    pygame.quit()\n"
    ]
   },
   {
